Bug 1504088 - Backed out changeset 8e4b25a12f2c for (most likely) causing an options window which is too small (bug 1506946). a=jorgk

--- a/mail/base/content/messenger.css
+++ b/mail/base/content/messenger.css
@@ -201,10 +201,6 @@ menupopup[type="folder"] {
   -moz-binding: url("chrome://messenger/content/addressbook/addrbookWidgets.xml#map-list");
 }
 
-.chromeclass-toolbar {
-  overflow-x: hidden;
-}
-
 /* Lightweight themes support */
 
 :root:-moz-lwtheme {
